--- a/my-business-card/package.json
+++ b/my-business-card/package.json
@@ -15,6 +15,7 @@
   "devDependencies": {
     "@types/react": "^18.0.26",
     "@types/react-dom": "^18.0.9",
+    "@vitejs/plugin-legacy": "^3.0.1",
     "@vitejs/plugin-react": "^3.0.0",
     "vite": "^4.0.0"
   }
